# SiliconForge-AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  database.py  main.py  schemas.py
backend/agents/: graph.py  nodes.py  state.py
backend/mcp_servers/: literature_server.py  search_server.py
backend/tools/: literature.py  search.py
data/: sample_papers.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentTracePanel.tsx  HistorySidebar.tsx  QueryInput.tsx  ReportViewer.tsx
frontend/src/lib/: api.ts  types.ts
